@@ -19,9 +19,11 @@ package org.apache.doris.alter;
 
 import org.apache.doris.analysis.AlterTableStmt;
 import org.apache.doris.analysis.ColumnPosition;
+import org.apache.doris.analysis.IndexDef;
 import org.apache.doris.catalog.Column;
 import org.apache.doris.catalog.Database;
 import org.apache.doris.catalog.Env;
+import org.apache.doris.catalog.Index;
 import org.apache.doris.catalog.KeysType;
 import org.apache.doris.catalog.MaterializedIndexMeta;
 import org.apache.doris.catalog.OlapTable;
@@ -49,7 +51,7 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
     @Override
     protected void runBeforeAll() throws Exception {
         FeConstants.default_scheduler_interval_millisecond = 10;
-        //create database db1
+        // create database db1
         createDatabase("test");
 
         //create tables
@@ -65,7 +67,8 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
                 + "username VARCHAR(50) NOT NULL,\n" + "city VARCHAR(20),\n" + "age SMALLINT,\n" + "sex TINYINT,\n"
                 + "phone LARGEINT,\n" + "address VARCHAR(500),\n" + "register_time DATETIME)\n"
                 + "UNIQUE  KEY(user_id, username)\n" + "DISTRIBUTED BY HASH(user_id) BUCKETS 1\n"
-                + "PROPERTIES ('replication_num' = '1', 'light_schema_change' = 'true');";
+                + "PROPERTIES ('replication_num' = '1', 'light_schema_change' = 'true',\n"
+                + "'enable_unique_key_merge_on_write' = 'true');";
         createTable(createUniqTblStmtStr);
 
         String createDupTblStmtStr = "CREATE TABLE IF NOT EXISTS test.sc_dup (\n" + "timestamp DATETIME,\n"
@@ -96,7 +99,7 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
     public void testAggAddOrDropColumn() throws Exception {
         LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
 
-        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("default_cluster:test");
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
         OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_agg", Table.TableType.OLAP);
         tbl.readLock();
         try {
@@ -107,12 +110,12 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process agg add value column schema change
+        // process agg add value column schema change
         String addValColStmtStr = "alter table test.sc_agg add column new_v1 int MAX default '0'";
         AlterTableStmt addValColStmt = (AlterTableStmt) parseAndAnalyzeStmt(addValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(addValColStmt);
         jobSize++;
-        //check alter job, do not create job
+        // check alter job, do not create job
         Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
         Assertions.assertEquals(jobSize, alterJobs.size());
 
@@ -123,18 +126,18 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             Assertions.assertEquals(baseIndexName, tbl.getName());
             MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
             Assertions.assertNotNull(indexMeta);
-            //col_unique_id 0-9
+            // col_unique_id 0-9
             Assertions.assertEquals(9, indexMeta.getMaxColUniqueId());
         } finally {
             tbl.readUnlock();
         }
 
-        //process agg add  key column schema change
+        // process agg add key column schema change
         String addKeyColStmtStr = "alter table test.sc_agg add column new_k1 int default '1'";
         AlterTableStmt addKeyColStmt = (AlterTableStmt) parseAndAnalyzeStmt(addKeyColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(addKeyColStmt);
 
-        //check alter job
+        // check alter job
         jobSize++;
         Assertions.assertEquals(jobSize, alterJobs.size());
         waitAlterJobDone(alterJobs);
@@ -150,12 +153,12 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process agg drop value column schema change
+        // process agg drop value column schema change
         String dropValColStmtStr = "alter table test.sc_agg drop column new_v1";
         AlterTableStmt dropValColStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(dropValColStmt);
         jobSize++;
-        //check alter job, do not create job
+        // check alter job, do not create job
         LOG.info("alterJobs:{}", alterJobs);
         Assertions.assertEquals(jobSize, alterJobs.size());
 
@@ -171,7 +174,7 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
         }
 
         try {
-            //process agg drop key column with replace schema change, expect exception.
+            // process agg drop key column with replace schema change, expect exception.
             String dropKeyColStmtStr = "alter table test.sc_agg drop column new_k1";
             AlterTableStmt dropKeyColStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropKeyColStmtStr);
             Env.getCurrentEnv().getAlterInstance().processAlterTable(dropKeyColStmt);
@@ -193,19 +196,23 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
 
         LOG.info("getIndexIdToSchema 2: {}", tbl.getIndexIdToSchema(true));
 
-        //process agg drop value column with rollup schema change
+        // process agg drop value column with rollup schema change
         String dropRollUpValColStmtStr = "alter table test.sc_agg drop column max_dwell_time";
         AlterTableStmt dropRollUpValColStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropRollUpValColStmtStr);
-        Env.getCurrentEnv().getAlterInstance().processAlterTable(dropRollUpValColStmt);
-        jobSize++;
-        //check alter job, need create job
+        try {
+            Env.getCurrentEnv().getAlterInstance().processAlterTable(dropRollUpValColStmt);
+            org.junit.jupiter.api.Assertions.fail();
+        } catch (Exception e) {
+            LOG.info("{}", e);
+        }
+        // check alter job, need create job
         LOG.info("alterJobs:{}", alterJobs);
         Assertions.assertEquals(jobSize, alterJobs.size());
         waitAlterJobDone(materializedViewAlterJobs);
 
         tbl.readLock();
         try {
-            Assertions.assertEquals(9, tbl.getBaseSchema().size());
+            Assertions.assertEquals(10, tbl.getBaseSchema().size());
             String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
             Assertions.assertEquals(baseIndexName, tbl.getName());
             MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
@@ -214,18 +221,18 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process agg add mul value column schema change
+        // process agg add mul value column schema change
         String addMultiValColStmtStr
                 = "alter table test.sc_agg add column new_v2 int MAX default '0', add column new_v3 int MAX default '1';";
         AlterTableStmt addMultiValColStmt = (AlterTableStmt) parseAndAnalyzeStmt(addMultiValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(addMultiValColStmt);
         jobSize++;
-        //check alter job, do not create job
+        // check alter job, do not create job
         Assertions.assertEquals(jobSize, alterJobs.size());
 
         tbl.readLock();
         try {
-            Assertions.assertEquals(11, tbl.getBaseSchema().size());
+            Assertions.assertEquals(12, tbl.getBaseSchema().size());
             String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
             Assertions.assertEquals(baseIndexName, tbl.getName());
             MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
@@ -241,7 +248,7 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
 
         LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
 
-        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("default_cluster:test");
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
         OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_uniq", Table.TableType.OLAP);
         tbl.readLock();
         try {
@@ -252,12 +259,12 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process uniq add value column schema change
+        // process uniq add value column schema change
         String addValColStmtStr = "alter table test.sc_uniq add column new_v1 int default '0'";
         AlterTableStmt addValColStmt = (AlterTableStmt) parseAndAnalyzeStmt(addValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(addValColStmt);
         jobSize++;
-        //check alter job, do not create job
+        // check alter job, do not create job
         Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
         LOG.info("alterJobs:{}", alterJobs);
         Assertions.assertEquals(jobSize, alterJobs.size());
@@ -273,12 +280,12 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process uniq drop val column schema change
+        // process uniq drop val column schema change
         String dropValColStmtStr = "alter table test.sc_uniq drop column new_v1";
         AlterTableStmt dropValColStm = (AlterTableStmt) parseAndAnalyzeStmt(dropValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(dropValColStm);
         jobSize++;
-        //check alter job
+        // check alter job
         Assertions.assertEquals(jobSize, alterJobs.size());
         tbl.readLock();
         try {
@@ -297,7 +304,7 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
 
         LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
 
-        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("default_cluster:test");
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
         OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_dup", Table.TableType.OLAP);
         tbl.readLock();
         try {
@@ -308,12 +315,12 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process uniq add value column schema change
+        // process uniq add value column schema change
         String addValColStmtStr = "alter table test.sc_dup add column new_v1 int default '0'";
         AlterTableStmt addValColStmt = (AlterTableStmt) parseAndAnalyzeStmt(addValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(addValColStmt);
         jobSize++;
-        //check alter job, do not create job
+        // check alter job, do not create job
         Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
         LOG.info("alterJobs:{}", alterJobs);
         Assertions.assertEquals(jobSize, alterJobs.size());
@@ -329,12 +336,12 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
             tbl.readUnlock();
         }
 
-        //process uniq drop val column schema change
+        // process uniq drop val column schema change
         String dropValColStmtStr = "alter table test.sc_dup drop column new_v1";
         AlterTableStmt dropValColStm = (AlterTableStmt) parseAndAnalyzeStmt(dropValColStmtStr);
         Env.getCurrentEnv().getAlterInstance().processAlterTable(dropValColStm);
         jobSize++;
-        //check alter job
+        // check alter job
         Assertions.assertEquals(jobSize, alterJobs.size());
         tbl.readLock();
         try {
@@ -367,11 +374,300 @@ public class SchemaChangeHandlerTest extends TestWithFeService {
 
         try {
             Deencapsulation.invoke(schemaChangeHandler, "addColumnInternal", olapTable, newColumn, columnPosition,
-                    new Long(2), new Long(1), Maps.newHashMap(), Sets.newHashSet(), false, Maps.newHashMap());
+                    Long.valueOf(2), Long.valueOf(1), Maps.newHashMap(), Sets.newHashSet(), false, Maps.newHashMap());
             Assert.fail();
         } catch (Exception e) {
             System.out.println(e.getMessage());
         }
 
     }
+
+    @Test
+    public void testAggAddOrDropInvertedIndex() throws Exception {
+        LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
+
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
+        OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_agg", Table.TableType.OLAP);
+        tbl.readLock();
+        try {
+            Assertions.assertNotNull(tbl);
+            Assertions.assertEquals("Doris", tbl.getEngine());
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+        } finally {
+            tbl.readUnlock();
+        }
+
+        // process agg add inverted index schema change
+        String addInvertedIndexStmtStr =
+                "alter table test.sc_agg add index idx_city(city) using inverted properties(\"parser\"=\"english\")";
+        AlterTableStmt addInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(addInvertedIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(addInvertedIndexStmt);
+        jobSize++;
+        // check alter job
+        Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
+        LOG.info("alterJobs:{}", alterJobs);
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(1, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+
+        // process agg drop inverted index schema change
+        String dropInvertedIndexStmtStr = "alter table test.sc_agg drop index idx_city";
+        AlterTableStmt dropInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropInvertedIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(dropInvertedIndexStmt);
+        jobSize++;
+        // check alter job
+        LOG.info("alterJobs:{}", alterJobs);
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+    }
+
+    @Test
+    public void testUniqAddOrDropInvertedIndex() throws Exception {
+
+        LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
+
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
+        OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_uniq", Table.TableType.OLAP);
+        tbl.readLock();
+        try {
+            Assertions.assertNotNull(tbl);
+            Assertions.assertEquals("Doris", tbl.getEngine());
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+        } finally {
+            tbl.readUnlock();
+        }
+
+        // process uniq add inverted index schema change
+        String addInvertedIndexStmtStr =
+                "alter table test.sc_uniq add index idx_city(city) using inverted properties(\"parser\"=\"english\")";
+        AlterTableStmt addInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(addInvertedIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(addInvertedIndexStmt);
+        jobSize++;
+        // check alter job
+        Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
+        LOG.info("alterJobs:{}", alterJobs);
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(1, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+
+        // process uniq drop inverted indexn schema change
+        String dropInvertedIndexStmtStr = "alter table test.sc_uniq drop index idx_city";
+        AlterTableStmt dropInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropInvertedIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(dropInvertedIndexStmt);
+        jobSize++;
+        // check alter job
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+    }
+
+    @Test
+    public void testDupAddOrDropInvertedIndex() throws Exception {
+
+        LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
+
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
+        OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_dup", Table.TableType.OLAP);
+        tbl.readLock();
+        try {
+            Assertions.assertNotNull(tbl);
+            Assertions.assertEquals("Doris", tbl.getEngine());
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+        } finally {
+            tbl.readUnlock();
+        }
+
+        // process dup add inverted index schema change
+        String addInvertedIndexStmtStr =
+                "alter table test.sc_dup add index idx_error_msg(error_msg) using inverted properties(\"parser\"=\"standard\")";
+        AlterTableStmt addInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(addInvertedIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(addInvertedIndexStmt);
+        jobSize++;
+        // check dup job
+        Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
+        LOG.info("alterJobs:{}", alterJobs);
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(1, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+
+        // process dup drop inverted index schema change
+        String dropInvertedIndexStmtStr = "alter table test.sc_dup drop index idx_error_msg";
+        AlterTableStmt dropInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropInvertedIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(dropInvertedIndexStmt);
+        jobSize++;
+        // check alter job
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+    }
+
+    @Test
+    public void testAddDuplicateInvertedIndexException() throws Exception {
+
+        LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
+
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
+        OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_dup", Table.TableType.OLAP);
+        tbl.readLock();
+        try {
+            Assertions.assertNotNull(tbl);
+            Assertions.assertEquals("Doris", tbl.getEngine());
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+        } finally {
+            tbl.readUnlock();
+        }
+
+        String addInvertedIndexStmtStr = "alter table test.sc_dup add index idx_error_msg(error_msg), "
+                + "add index idx_error_msg1(error_msg)";
+        AlterTableStmt addInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(addInvertedIndexStmtStr);
+        try {
+            Env.getCurrentEnv().getAlterInstance().processAlterTable(addInvertedIndexStmt);
+        } catch (Exception e) {
+            // Verify the error message contains relevant info
+            Assertions.assertTrue(e.getMessage().contains("INVERTED index for columns (error_msg) already exist"));
+        }
+        addInvertedIndexStmtStr = "alter table test.sc_dup add index idx_error_msg(error_msg), "
+                + "add index idx_error_msg(error_msg)";
+        addInvertedIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(addInvertedIndexStmtStr);
+        try {
+            Env.getCurrentEnv().getAlterInstance().processAlterTable(addInvertedIndexStmt);
+        } catch (Exception e) {
+            // Verify the error message contains relevant info
+            Assertions.assertTrue(e.getMessage().contains("index `idx_error_msg` already exist."));
+        }
+    }
+
+    @Test
+    public void testDupAddOrDropNgramBfIndex() throws Exception {
+        LOG.info("dbName: {}", Env.getCurrentInternalCatalog().getDbNames());
+
+        Database db = Env.getCurrentInternalCatalog().getDbOrMetaException("test");
+        OlapTable tbl = (OlapTable) db.getTableOrMetaException("sc_dup", Table.TableType.OLAP);
+        tbl.readLock();
+        try {
+            Assertions.assertNotNull(tbl);
+            Assertions.assertEquals("Doris", tbl.getEngine());
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+        } finally {
+            tbl.readUnlock();
+        }
+        String addNgramBfIndexStmtStr = "ALTER TABLE test.sc_dup "
+                + "ADD INDEX idx_error_msg(error_msg) USING NGRAM_BF "
+                + "PROPERTIES(\"gram_size\"=\"2\", \"bf_size\"=\"256\")";
+        AlterTableStmt addNgramBfIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(addNgramBfIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(addNgramBfIndexStmt);
+
+        jobSize++;
+        Map<Long, AlterJobV2> alterJobs = Env.getCurrentEnv().getSchemaChangeHandler().getAlterJobsV2();
+        LOG.info("alterJobs:{}", alterJobs);
+        Assertions.assertEquals(jobSize, alterJobs.size());
+
+        waitAlterJobDone(alterJobs);
+
+        String buildNgramBfIndexStmtStr = "BUILD INDEX idx_error_msg on test.sc_dup ";
+        AlterTableStmt buildNgramBfIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(buildNgramBfIndexStmtStr);
+        org.junit.jupiter.api.Assertions.assertThrows(org.apache.doris.common.DdlException.class,
+                () -> Env.getCurrentEnv().getAlterInstance().processAlterTable(buildNgramBfIndexStmt));
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(1, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+
+            Assertions.assertEquals("idx_error_msg", tbl.getIndexes().get(0).getIndexName());
+            Assertions.assertEquals(IndexDef.IndexType.NGRAM_BF, tbl.getIndexes().get(0).getIndexType());
+            Map<String, String> props = tbl.getIndexes().get(0).getProperties();
+            Assertions.assertEquals("2", props.get("gram_size"));
+            Assertions.assertEquals("256", props.get("bf_size"));
+            Index index = tbl.getIndexes().get(0);
+            LOG.warn("index:{}", index.toString());
+            Assertions.assertEquals(IndexDef.IndexType.NGRAM_BF, index.getIndexType());
+            Assertions.assertTrue(index.toString().contains("USING NGRAM_BF"));
+        } finally {
+            tbl.readUnlock();
+        }
+
+        String dropNgramBfIndexStmtStr = "ALTER TABLE test.sc_dup DROP INDEX idx_error_msg";
+        AlterTableStmt dropNgramBfIndexStmt = (AlterTableStmt) parseAndAnalyzeStmt(dropNgramBfIndexStmtStr);
+        Env.getCurrentEnv().getAlterInstance().processAlterTable(dropNgramBfIndexStmt);
+        jobSize++;
+        Assertions.assertEquals(jobSize, alterJobs.size());
+        waitAlterJobDone(alterJobs);
+
+        tbl.readLock();
+        try {
+            Assertions.assertEquals(0, tbl.getIndexes().size());
+            String baseIndexName = tbl.getIndexNameById(tbl.getBaseIndexId());
+            Assertions.assertEquals(baseIndexName, tbl.getName());
+            MaterializedIndexMeta indexMeta = tbl.getIndexMetaByIndexId(tbl.getBaseIndexId());
+            Assertions.assertNotNull(indexMeta);
+        } finally {
+            tbl.readUnlock();
+        }
+    }
+
 }
